# LinearRegression

./: pyproject.toml
01 Simple/: SimpleLinearRegression.ipynb  SimpleLinearRegressionWithSklearn.ipynb
02 Multiple/: MultipleLinearRegressionExercise.ipynb  MultipleLinearRegressionWithSKLearn.ipynb  SKLearnFeatureScaling.ipynb
03 Dummy Variable/: MultipleLinearRegressionwithDummiesExercise.ipynb
04 Real Life Execise/: SKLearnRealLifeExample.ipynb
simple/: SimpleLinearRegression.ipynb
